# telegram-rs

./: .travis.yml  Cargo.toml
examples/create_auth_key/: Cargo.toml
examples/create_auth_key/src/: main.rs
src/: app_info.rs  client.rs  error.rs  lib.rs
telegram/: Cargo.toml
telegram/src/: client.rs  error.rs  lib.rs  message.rs  request.rs  response.rs
telegram_codegen/src/: generator.rs
telegram_derive/src/: lib.rs
