[package]
name = "telegram"
version = "0.2.0"
description = "Unofficial Telegram API Library"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
workspace = "../"
license = "MIT/Apache-2.0"
homepage = "https://github.com/mehcode/telegram-rs"
documentation = "https://docs.rs/telegram"
repository = "https://github.com/mehcode/telegram-rs"

[dependencies]
byteorder = "1.1.0"
error-chain = "0.10.0"
extprim = "1.4.0"
futures = "0.1.14"
hyper = "0.11"
serde = "1.0.10"
serde_derive = "1.0.10"
serde_mtproto = "0.3.1"
serde_mtproto_derive = "0.3.1"
tokio-core = "0.1.6"

[build-dependencies]
telegram_codegen = { path = "../telegram_codegen", version = "0.2.0" }
